--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChatBot</title>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./src/assets/images/fx-cs-favicon.jpg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Fxclub CS Assistant</title>
 </head>
 
 <body>
-    <form id="chatForm">
-        <input type="text" id="message" name="message">
-        <input type="button" value="Send" onclick="sendMessage()">
-    </form>
-    <div class="response" id="response"></div>
-    <script src="script.js"></script>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
 </body>
 
 </html>
